# rust-puzzles

./: .env  .gitignore  .travis.yaml  Cargo.toml  LICENSE  README.md  TDD.md  build.sh  scrap.sh  start.sh
.github/workflows/: test.yaml  upload-artifact.yaml
input/: quizzes.json
input/week1/: breaking_the_records.txt  sparse_arrays.txt  time_conversion.txt
input/week2/: counting_sort_1.txt  flipping_bits.txt  lonely_integer.txt
input/week3/: drawing_book.txt  maximum_perimeter_triangle.txt  permuting_two_arrays.txt  sales_by_match.txt  subarray_division_2.txt
output/week1/: sparse_arrays.txt
src/: lib.rs  main.rs
src/interface/: controllers.rs  mod.rs  repl.rs  types.rs
src/interface/controllers/: key_down.rs  key_up.rs  log.rs  mod.rs  read.rs  start_quiz.rs
src/interface/render/: copyright.rs  draw_terminal.rs  home.rs  list_quizzes.rs  list_results.rs  menu.rs  mod.rs  start.rs
src/quizes/: mini_max_sum.rs  mod.rs  plus_minus.rs  time_conversion.rs
src/quizes/week1/: breaking_the_records.rs  camel_case_4.rs  divisible_sum_pairs.rs  mini_max_sum.rs  mod.rs  plus_minus.rs  sparse_arrays.rs  time_conversion.rs
src/quizes/week2/: counting_sort_1.rs  counting_valleys.rs  diagonal_difference.rs  flipping_bits.rs  grading_students.rs  lonely_integer.rs  mars_exploration.rs  mod.rs  pangrams.rs
src/quizes/week3/: drawing_book.rs  maximum_perimeter_triangle.rs  migratory_birds.rs  mod.rs  (+5 more)
src/quizzes/: mod.rs  quizzes.json  types.rs  utils.rs
user-data/: .timestamp  Cargo.toml  results.json
user-data/src/: main.rs  plus_minus-2011100237.rs
(+53 files in other folders)
