[package]
name = "rq"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
serde_json = "1.0.93"
thiserror = "1.0.38"
crossterm = { version = "0.26", features = [ "serde" ] }
serde = {version = "1.0.152", features = ["derive"] }
chrono = { version = "0.4.23", features = ["serde"] }
rand = { version = "0.8.5", default-features = false, features = ["std", "std_rng"] }
tui = { version = "0.19", default-features = false, features = ['crossterm', 'serde'] }